# reboost

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.rst
src/reboost/: __init__.py  build_elm.py  build_evt.py  build_glm.py  build_hit.py  cli.py  core.py  heuristics.py  io.py  iterator.py  log_utils.py  profile.py  utils.py
src/reboost/hpge/: drift_time.py  psd.py  surface.py
src/reboost/math/: functions.py  stats.py
src/reboost/optical/: cli.py  convolve.py  create.py  evt.py  mapview.py  optmap.py
src/reboost/optmap/: cli.py  convolve.py  create.py  evt.py  mapview.py  numba_pdg.py  optmap.py
src/reboost/shape/: cluster.py  group.py
tests/: conftest.py  test_cli.py  test_core.py  test_math.py  test_optmap.py  test_profile.py  test_shape.py  test_utils.py
tests/elm/: test_build_elm.py
tests/glm/: test_build_glm.py
tests/hit/: test_build_hit.py  test_r90.py
tests/hit/configs/: args.yaml  basic.yaml  geom.gdml  hit_config.yaml  pars.yaml  r90_test.yaml
tests/hit/test_files/: beta_small.lh5
tests/hpge/: test_dt_heuristic.py  test_r90.py  test_surface.py
tests/hpge/test_files/: B99000A_drift_time_map.lh5  internal_electron.lh5
